# sycore

./: .gitignore  .rustfmt.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  clippy.toml  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yaml  audit.yml
data/: orchestra_sample_data.json
docs/: SPEC-credential-envelope.md  SPEC-sycore-envelope-boundary.md
docs/superpowers/plans/: 2026-06-16-sycore-domain-kernel.md  2026-06-22-sycore-envelope-seam-followups.md
docs/superpowers/specs/: 2026-06-16-sycore-domain-kernel-design.md  2026-06-23-credential-envelope-example-design.md
examples/: credential_envelope.rs
katas/credential-envelope-kata/: README.md
katas/credential-envelope-kata/exercise/: Cargo.toml
katas/credential-envelope-kata/exercise/src/: lib.rs
katas/credential-envelope-kata/exercise/tests/: two_hash.rs
katas/credential-envelope-kata/solution/: SOLUTION.md
katas/credential-envelope-kata/solution/src/: lib.rs
src/: apply.rs  command.rs  entity.rs  error.rs  event.rs  ids.rs  lib.rs  query.rs  seed.rs  state.rs  time.rs  view.rs
tests/: sample_season.rs  seam_invariants.rs
